--- a/index.html
+++ b/index.html
@@ -46,6 +46,44 @@
       padding: 20px;
     }
 
+    @media (max-width: 768px) {
+      .sidebar {
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+      }
+
+      .sidebar a {
+        padding: 10px;
+        font-size: 12px;
+      }
+
+      .main {
+        margin-left: 0;
+        padding: 15px;
+      }
+
+      header {
+        padding: 30px 10px;
+      }
+
+      .profile-pic {
+        width: 160px;
+        height: 160px;
+      }
+
+      .video-section {
+        grid-template-columns: 1fr;
+        gap: 20px;
+      }
+
+      #contact {
+        padding: 40px 15px;
+      }
+    }
+
     header {
       text-align: center;
       padding: 50px 20px 20px;
@@ -179,22 +217,7 @@
   </div>
 
   <script>
-    const videos = [
-      { link: "https://www.youtube.com/embed/AArYhLtPgXM", desc: "An instructional video I edited to guide employees on how to effectively use Salesforce.", type: "corporate" },
-      { link: "https://www.youtube.com/embed/ALQMVbNb8Co", desc: "A corporate-style interview highlighting key insights and perspectives about the company.", type: "corporate" },
-      { link: "https://www.youtube.com/embed/YZjce4yhHPE", desc: "A timelapse capturing the progress and transformation of the project from start to finish.", type: "corporate" },
-      { link: "https://www.youtube.com/embed/AjBUYXoFWSo", desc: "A promotional teaser created for a client to build anticipation for an upcoming event.", type: "corporate" },
-
-      { link: "https://www.youtube.com/embed/Zn1w953_mZA", desc: "Shot during my time studying in Norway, this was a fast-paced collaborative project set in a local bar, highlighting our ability to plan and execute under time constraints.", type: "narrative" },
-      { link: "https://www.youtube.com/embed/2n3UkWppLrk", desc: "A fast-paced promotional montage created for a friend’s clothing brand, showcasing style, energy, and visual flair.", type: "narrative" },
-      { link: "https://www.youtube.com/embed/vdfG4Zg7Hww", desc: "A reflective short film exploring the overlooked moments and small details a character fails to appreciate—until they’re gone.", type: "narrative" },
-      { link: "https://www.youtube.com/embed/eswpazPrw6k", desc: "A stylized video illustrating the addictive nature of social media and its impact on attention span—drawing parallels to the fragmented focus of a fish brain in a digital world.", type: "narrative" },
-      { link: "https://www.youtube.com/embed/eqM_UiJUdAQ", desc: "A visual montage following a lead character through a tapestry of faces and locations, capturing emotion, connection, and movement across space and time.", type: "narrative" },
-
-      { link: "https://www.youtube.com/embed/Kc5XzxwwoDo", desc: "Designed the soundscape for a T-Rex in a cinematic, atmospheric environment—layering footsteps, growls, and ambient textures to enhance tension and immersion.", type: "sound" },
-      { link: "https://www.youtube.com/embed/K4uYqEATpUI", desc: "Created detailed mechanical sounds to bring a robot assembly sequence to life—featuring layered servo whirs, metallic clanks, and rhythmic machinery.", type: "sound" },
-      { link: "https://www.youtube.com/embed/D2lK5Ov3fRU", desc: "Independent sound design practice on a BIFSC short film, portraying nature consuming the planet and starting anew. Focused on capturing the cycle of collapse and rebirth through organic textures and atmospheric layers.", type: "sound" }
-    ];
+    const videos = [...]; // same video array from before
 
     function loadVideos(filter = 'all') {
       const container = document.getElementById('videos');
